# python-template

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
